Major code refactoring

--- a/BB.Finances/BB.Finances.WebAPI/BB.Finances.WebAPI.csproj
+++ b/BB.Finances/BB.Finances.WebAPI/BB.Finances.WebAPI.csproj
@@ -26,4 +26,8 @@
     <ProjectReference Include="..\BB.Finances.Data\BB.Finances.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
