Added Jwt CQRS. Test REfactored to suit new controller constructor

--- a/BB.IdentityService/BB.IdentityService.Tests/BB.IdentityService.Tests.csproj
+++ b/BB.IdentityService/BB.IdentityService.Tests/BB.IdentityService.Tests.csproj
@@ -19,15 +19,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BB.Core\BB.Core.csproj" />
     <ProjectReference Include="..\BB.IdentityService.WebAPI\BB.IdentityService.WebAPI.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <Using Include="Xunit" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Fixtures\" />
   </ItemGroup>
 
 </Project>
