--- a/BB.IdentityService/BB.IdentityService.WebAPI/BB.IdentityService.WebAPI.csproj
+++ b/BB.IdentityService/BB.IdentityService.WebAPI/BB.IdentityService.WebAPI.csproj
@@ -7,8 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.7" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BB.Core\BB.Core.csproj" />
   </ItemGroup>
 
 </Project>
